--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,12 @@ body {
 }
 
 h1 {
-    color: rgb(0, 0, 0);
     text-align: center;
     margin-bottom: 10px;
+    font-size: 4em;
+    background: linear-gradient(to left,#527223,#ffffff,#527223,#203401);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color:transparent;
 }
 
 h4 {
@@ -31,6 +34,12 @@ h4 {
     padding: 10px;
     flex: 1 1 calc(33.33% - 20px);
     text-align: center;
+    /*elemento que queremos aplicar efeito*/
+    transition: transform 0.6s ease;
+}
+
+.galeria-item:hover{
+    transform: scale(1.05);
 }
 
 .galeria-item h1 {
@@ -44,14 +53,13 @@ font-size: 35px;
 width: 400px;
 border-radius: 8px;
 margin: 5px;
+/*elemento que queremos que aplica efeito*/
 transition: transform 0.3s ease;
 }
 
 .galeria-item img:hover{
     transform: scale(1.10);
     box-shadow: 0 8px 15px rgba(252, 252, 252, 0.1);
-    
-
 }
 
 
